--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/bin/www.js"
+    "dev": "nodemon src/bin/www.js",
+    "test": "jest --detectOpenHandles --runInBand --forceExit --silent --coverage --verbose --watchAll"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "prisma": "^5.11.0"
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
+    "prisma": "^5.11.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.3"
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
@@ -21,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-session": "^1.18.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "supertest": "^6.3.4"
   }
 }
